# desktop

./: .npmrc  .nvmrc  LICENSE  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.cjs
assets/: README
src/: app.d.ts  app.html  app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/first_run/: mod.rs  settings.rs
src-tauri/src/hello/: mod.rs
src/components/: SplitterCard.svelte
src/i18n/: index.ts
src/i18n/locales/: en-US.ts  en.json  ja-JP.json
src/routes/: __layout.svelte  index.svelte
src/settings/: index.ts
